--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,6 +4,6 @@ metadata:
   name: jobs-secrets
 type: Opaque
 stringData:
-  mongodb-uri: "mongodb://root:tcfhqcmh@test-db-01-mongodb.ns-4dawiaba.svc:27017/jobs-search"
+  mongodb-uri: "mongodb://root:ttt9wd47@test-db-jobs-search-mongodb.ns-4dawiaba.svc:27017"
   jwt-secret: "8a3cc43bd484c0b082045250cf1ff904e05bdceaabae87b80971d8dbec1bc466"
   scraper-api-token: ""  # 可选，如果需要爬虫API认证的话
