--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/compression": "^1.7.5",
     "@types/joi": "^17.2.3",
     "typescript": "^5.4.5",
+    "esbuild": "^0.20.2",
     "ts-node": "^10.9.2",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
